Cleanup for the PR to main branch/fork in EduQuiz